test/recursiveNested5.slq

def main(){
	x:=H(0:ğ”¹);
	def foo():ğ”¹{
		measure(x);
		if measure(H(0:ğ”¹)){ return 0:ğ”¹; }
		return foo(); /// error
	}
	return foo();
}
